# loro

./: .env.example  .gitignore  README.md  pyproject.toml
assets/fonts/: README.md
scripts/: ensemble_acceptance.py  weight_sweep.py
src/loro/: __main__.py  config.py  graph.py  state.py
src/loro/harness/: __init__.py  artifacts.py  diff.py  ledger.py  preflight.py  qa.py  report.py  retry.py
src/loro/nodes/: asr.py  context.py  crosscheck.py  fit.py  ingest.py  mux.py  seg_visual.py  sentence_seg.py  translate.py  tts.py  vision.py  voice.py
src/loro/profiles/: __init__.py  base.py  data.py
src/loro/providers/: __init__.py  base.py
src/loro/services/: assemblyai.py  gemini.py  higgs.py  llm.py  soniox.py  soniox_stt.py  vieneu.py  ytdl.py
tests/: test_artifacts.py  test_asr_assemblyai.py  test_asr_merge.py  test_asr_soniox.py  test_assemblyai.py  test_config.py  test_config_gemini.py  test_context.py  test_crosscheck.py  test_diff_vote.py  test_ffmpeg.py  test_fingerprint_parity.py  test_fit.py  test_gemini.py  test_gemini_batch.py  test_granite_worker.py  test_graph_integration.py  test_ledger.py  test_llm.py  test_main_cli.py  test_mux.py  test_preflight.py  test_profiles_registry.py  test_providers_registry.py  test_qa_gate.py  test_report.py  test_retry.py  test_seg_visual.py  test_sentence_seg.py  test_sentences.py  test_soniox.py  test_soniox_stt.py  test_soniox_tokens.py  test_srt.py  test_subs.py  test_textchunk.py  test_translate_cache.py  test_tts_chunk.py  test_tts_engine.py  test_url.py  (+4 more)
tests/fixtures/: asr_under_punctuated_span.json
(+18 files in other folders)
