[project]
name = "loro"
version = "0.1.0"
description = "LangGraph harness for dubbing English videos into Vietnamese"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Vinh Nguyen" }]
requires-python = ">=3.11"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "langgraph>=0.2",
    "openai>=1.40",
    "requests>=2.31",
    "numpy>=1.26",
    "soundfile>=0.12",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8"]

[project.scripts]
loro = "loro.__main__:_cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
